makes page-header

--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -1,3 +1,9 @@
 {
-  "title": "Авторский сайт Зафара Мирзо"
+  "title": "Авторский сайт Зафара Мирзо",
+  "logoAlt": "На главную",
+  "toggleMenu": "Переключить меню",
+  "quotes": "Мысли",
+  "tags": "Теги",
+  "aboutAuthor": "Об авторе",
+  "search": "Поиск"
 }
