--- a/resources/lang/ru.json
+++ b/resources/lang/ru.json
@@ -5,5 +5,7 @@
   "quotes": "Мысли",
   "tags": "Теги",
   "aboutAuthor": "Об авторе",
-  "search": "Поиск"
+  "search": "Поиск",
+  "copyright": "© Зафар Мирзо",
+  "forFeedback": "Обратная связь:"
 }
